# bankinter-converter

./: README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bankinter_converter/: checking_account.py  credit_card.py
scripts/: release.py
