[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bankinter-converter"
version = "0.1.0"
description = "A CLI tool to convert Bankinter bank statements (checking accounts and credit cards) from Excel to CSV that can be read by Actual Budgeting"
authors = [
    { name = "Joan Perez Guerrero", email = "joanperezguerrero@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pandas>=2.0.0", "openpyxl>=3.0.0", "xlrd>=2.0.0"]

[project.scripts]
bankinter-converter = "bankinter_converter.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
